Switch to ntfsinfo to read NTFS usage.

BUG: 447248